# qbs

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.LGPL  LICENSE.LGPLv3  README  README.md  RELEASE.md  conandata.yml  conanfile.py  docker-compose.yml  make-release-archive.sh  qbs.pro  qbs.qbs  qbs_version.pri  static-res.pro  static.pro  sync.profile  version.js
doc/: CMakeLists.txt  codeattributions.qdoc  doc.pri  doc.qbs  doc_shared.pri  doc_targets.pri  external-resources.qdoc  fix-qmlimports.py  fixnavi.pl  howtos.qdoc  qbs-hugo.qdocconf  qbs-online.qdocconf  qbs-qt4.qdocconf  qbs.qdoc  qbs.qdocconf  tutorial.qdoc
doc/appendix/: json-api.qdoc  qbs-porting.qdoc
doc/config/: compat-qt4.qdocconf  macros.qdocconf  qbs-project.qdocconf  qt-html-templates-online.qdocconf  qt-html-templates.qdocconf
doc/config/style/: qt5-sidebar.html
doc/items/: export.qdoc  filetagger.qdoc  group.qbs  group.qdoc  product.qdoc  productmodule.qdoc  project.qdoc  properties.qdoc  rule.qdoc  subproject.qdoc  transformer.qdoc
doc/man/: CMakeLists.txt  man.pri  man.qbs  qbs.1  see-also.h2m
doc/reference/: commands.qdoc  list-of-tools.qdoc  reference.qdoc
doc/reference/cli/: cli-options.qdocinc  cli-parameters.qdocinc  cli.qdoc
doc/reference/cli/builtin/: cli-build.qdoc  cli-clean.qdoc  cli-dump-nodes-tree.qdoc  cli-generate.qdoc  cli-help.qdoc  cli-install.qdoc  cli-list-products.qdoc  cli-resolve.qdoc  cli-run.qdoc  cli-session.qdoc  cli-shell.qdoc  cli-status.qdoc  cli-update-timestamps.qdoc  cli-version.qdoc
doc/reference/cli/tools/: cli-config-ui.qdoc  cli-config.qdoc  cli-create-project.qdoc  cli-setup-android.qdoc  cli-setup-qt.qdoc  cli-setup-toolchains.qdoc
doc/reference/items/: androidapk.qdoc  application.qdoc  applicationextension.qdoc  artifact.qdoc  autotestrunner.qdoc  cppapplication.qdoc  depends.qdoc  dynamiclibrary.qdoc  export.qdoc  filetagger.qdoc  group.qbs  group.qdoc  innosetup.qdoc  installpackage.qdoc  javaclasscollection.qdoc  javajarfile.qdoc  loadablemodule.qdoc  module.qdoc  probe.qdoc  product.qdoc  project.qdoc  properties.qdoc  propertyoptions.qdoc  qtapplication.qdoc  qtguiapplication.qdoc  rule.qdoc  scanner.qdoc  staticlibrary.qdoc  subproject.qdoc  transformer.qdoc  xpcservice.qdoc
doc/reference/items/convenience/: androidapk.qdoc  appleapplicationdiskimage.qdoc  applediskimage.qdoc  application.qdoc  applicationextension.qdoc  autotestrunner.qdoc  configbuild.qdoc  configinstall.qdoc  cppapplication.qdoc  cpplibrary.qdoc  cppstd.qdoc  dynamiclibrary.qdoc  innosetup.qdoc  installpackage.qdoc  javaclasscollection.qdoc  javajarfile.qdoc  library.qdoc  loadablemodule.qdoc  objectlibrary.qdoc  plugin.qdoc  qtapplication.qdoc  qtguiapplication.qdoc  qtlupdaterunner.qdoc  staticlibrary.qdoc  xpcservice.qdoc
doc/reference/items/language/: artifact.qdoc  depends.qdoc  export.qdoc  filetagger.qdoc  group.qbs  group.qdoc  joblimit.qdoc  module.qdoc  moduleprovider.qdoc  parameter.qdoc  parameters.qdoc  probe.qdoc  product.qdoc  profile.qdoc  project.qdoc  properties.qdoc  propertyoptions.qdoc  rule.qdoc  scanner.qdoc  subproject.qdoc
doc/reference/items/probe/: binary-probe.qdoc  conanfile-probe.qdoc  dmc-probe.qdoc  framework-probe.qdoc  iar-probe.qdoc  include-probe.qdoc  keil-probe.qdoc  library-probe.qdoc  path-probe.qdoc  pathprobe.qdoc  pkgconfig-probe.qdoc  sdcc-probe.qdoc  watcom-probe.qdoc
doc/reference/jsextensions/: jsextension-binaryfile.qdoc  jsextension-domxml.qdoc  jsextension-environment.qdoc  jsextension-file.qdoc  jsextension-fileinfo.qdoc  jsextension-host.qdoc  jsextension-process.qdoc  jsextension-propertylist.qdoc  jsextension-temporarydir.qdoc  jsextension-textfile.qdoc  jsextension-utilities.qdoc  jsextension-xml.qdoc  jsextensions-general.qdoc
doc/reference/module-providers/: conan-module-provider.qdoc  qbspkgconfig-module-provider.qdoc  qt-module-provider.qdoc
doc/reference/modules/: android-ndk-module.qdoc  android-sdk-module.qdoc  archiver-module.qdoc  asan-module.qdoc  autotest-module.qdoc  bundle-module.qdoc  capnprotocpp-module.qdoc  codesign-module.qdoc  config-build-module.qdoc  config-install-module.qdoc  cpp-module.qdoc  cpufeatures-module.qdoc  dmg-module.qdoc  exporter-cmake.qdoc  exporter-pkgconfig-module.qdoc  exporter-qbs-module.qdoc  flatbuf-c-module.qdoc  flatbuf-cpp-module.qdoc  freedesktop-module.qdoc  ib-module.qdoc  ico-module.qdoc  innosetup-module.qdoc  install-paths-module.qdoc  java-module.qdoc  lexyacc-module.qdoc  nodejs-module.qdoc  nsis-module.qdoc  pkgconfig-module.qdoc  protobufcpp-module.qdoc  protobufnanopb-module.qdoc  protobufobjc-module.qdoc  qbs-module.qdoc  qnx-module.qdoc  qt-android_support-module.qdoc  qt-core-module.qdoc  qt-dbus-module.qdoc  qt-declarative-module.qdoc  qt-gui-module.qdoc  qt-modules.qdoc  qt-plugin_support-module.qdoc  (+9 more)
doc/targets/: qbs-target-android.qdoc  qbs-target-apple-common.qdocinc  qbs-target-integrity.qdoc  qbs-target-ios.qdoc  qbs-target-linux.qdoc  qbs-target-macos.qdoc  qbs-target-platforms.qdoc  qbs-target-qnx.qdoc  qbs-target-tvos.qdoc  qbs-target-vxworks.qdoc  qbs-target-watchos.qdoc  qbs-target-windows.qdoc
doc/templates/scripts/: functions.js
share/: CMakeLists.txt  share.pri  share.qbs
share/qbs/module-providers/: conan.js  conan.qbs  qbspkgconfig.qbs
share/qbs/module-providers/Qt/: provider.qbs  setup-qt.js
share/qbs/module-providers/__fallback/: fallback.qbs
share/qbs/modules/: utils.js
share/qbs/modules/Exporter/: exporter.js
share/qbs/modules/Qt/: QtModule.qbs  qtfunctions.js
share/qbs/modules/archiver/: archiver.qbs
src/lib/corelib/: CMakeLists.txt  corelib.pro  corelib.qbs  qbs.h  use_corelib.pri  use_installed_corelib.pri
src/lib/scriptengine/: CMakeLists.txt  scriptengine.pro  scriptengine.qbs  use_scriptengine.pri
src/shared/quickjs/: .clang-tidy  CMakeLists.txt  cutils.c  cutils.h  libbf.c  libbf.h  libregexp.c  libunicode.c  list.h  quickjs.c  quickjs.diff  quickjs.h  quickjs.qbs  sync.sh
(+4828 files in other folders)
